# ContainerDevelopment

./: LICENSE  README.md  docker-compose.yaml
app/: Dockerfile  main.py  pyproject.toml
